--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
+    "crypto-js": "^3.1.9-1",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
@@ -37,6 +41,11 @@
       "last 1 safari version"
     ]
   },
+  "browser": {
+    "crypto": false,
+    "stream": false
+},
+  
   "devDependencies": {
     "tailwindcss": "^3.4.3"
   }
